@@ -394,7 +394,11 @@ function wcs_get_orders_with_meta_query( $args ) {
 				return $query;
 			}
 
-			$query['meta_query'] = $meta; // phpcs:ignore WordPress.DB.SlowDBQuery.slow_db_query_meta_query
+			if ( ! isset( $query['meta_query'] ) ) {
+				$query['meta_query'] = $meta; // phpcs:ignore WordPress.DB.SlowDBQuery.slow_db_query_meta_query
+			} else {
+				$query['meta_query'] = array_merge( $query['meta_query'], $meta ); // phpcs:ignore WordPress.DB.SlowDBQuery.slow_db_query_meta_query
+			}
 
 			return $query;
 		};
